# ghistintime

./: .gitignore  README.md  app_tests.py  ghist.py  pyproject.toml  requirements-dev.txt  test.sh  upgrade.sh
ghistintime/: __init__.py
test/: test_it.py
